--- a/website/liveapi/liveapi.html
+++ b/website/liveapi/liveapi.html
@@ -11,6 +11,11 @@
 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.4.1/umd/react.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.4.1/umd/react-dom.production.min.js"></script>
+    <style>
+    body {
+      margin: 0;
+    }
+    </style>
     <!-- TODO: add wretch -->
     <title>@phensley/cldr</title>
   </head>
